--- a/src/tokens/_text.scss
+++ b/src/tokens/_text.scss
@@ -16,7 +16,7 @@
     --f-paragraph-text-font: var(--f-default-text-font);
     --f-paragraph-text-weight: normal;
     --f-paragraph-text-color: var(--f-default-text-color);
-    --f-paragraph-line-height: 1.5em;
+    --f-paragraph-line-height: 1.3em;
     --f-paragraph-margin: 0 0 var(--f-gutter) 0;
     
     // Links
@@ -47,6 +47,7 @@
     --f-h1-text-color: var(--f-default-headers-color);
     --f-h1-text-line-height: var(--f-default-headers-line);
     --f-h1-text-margin: var(--f-default-headers-margin);
+    --f-h1-text-letter-spacing: normal;
     
     // H2
     --f-h2-text-size: 40px;
@@ -55,6 +56,7 @@
     --f-h2-text-color: var(--f-default-headers-color);
     --f-h2-text-line-height: var(--f-default-headers-line);
     --f-h2-text-margin: var(--f-default-headers-margin);
+    --f-h2-text-letter-spacing: normal;
     
     // H3
     --f-h3-text-size: 28px;
@@ -63,28 +65,32 @@
     --f-h3-text-color: var(--f-default-headers-color);
     --f-h3-text-line-height: var(--f-default-headers-line);
     --f-h3-text-margin: var(--f-default-headers-margin);
+    --f-h3-text-letter-spacing: normal;
     
     // H4
-    --f-h4-text-size: 18px;
+    --f-h4-text-size: 24px;
     --f-h4-text-font: var(--f-default-headers-font);
     --f-h4-text-weight: var(--f-default-headers-weight);
     --f-h4-text-color: var(--f-default-headers-color);
     --f-h4-text-line-height: var(--f-default-headers-line);
     --f-h4-text-margin: var(--f-default-headers-margin);
+    --f-h4-text-letter-spacing: normal;
     
     // H5
-    --f-h5-text-size: 18px;
+    --f-h5-text-size: 20px;
     --f-h5-text-font: var(--f-default-headers-font);
     --f-h5-text-weight: var(--f-default-headers-weight);
     --f-h5-text-color: var(--f-default-headers-color);
     --f-h5-text-line-height: var(--f-default-headers-line);
     --f-h5-text-margin: var(--f-default-headers-margin);
+    --f-h5-text-letter-spacing: 0.01em;
     
     // H6
-    --f-h6-text-size: 18px;
+    --f-h6-text-size: 16px;
     --f-h6-text-font: var(--f-default-headers-font);
     --f-h6-text-weight: var(--f-default-headers-weight);
     --f-h6-text-color: var(--f-default-headers-color);
     --f-h6-text-line-height: var(--f-default-headers-line);
     --f-h6-text-margin: var(--f-default-headers-margin);
+    --f-h6-text-letter-spacing: 0.01em;
 }    
